--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "uniqid": "^5.3.0"
   }
 }
